crates/shingetsu-compiler/tests/compile_fail/enum_unit_variant.rs
use shingetsu::FromLua;

#[derive(FromLua)]
enum Bad {
    Nothing,
    Str(shingetsu::Bytes),
}

fn main() {}
